# control-lab-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate-plot.yml
docs/: portfolio-summary.md  tuning-notes.md
examples/: run-simulation.sh  run-sweep.sh  run.csv  sample-output.txt  sweep.csv
firmware/arduino_pid_motor/: arduino_pid_motor.ino
src/control_lab/: __init__.py  cli.py  filters.py  metrics.py  pid.py  plant.py  plotting.py  simulate.py  sweep.py
tests/: test_pid.py  test_plotting.py  test_simulate.py  test_sweep.py
