[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-lab-toolkit"
version = "0.1.0"
description = "PID control and embedded motor-control practice toolkit"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Control Lab Student" }]

[project.scripts]
control-lab = "control_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

